--- a/public/styles.css
+++ b/public/styles.css
@@ -18,10 +18,34 @@ header {
     height: 10vh;
 }
 
+#title {
+    font-size: 3rem;
+}
+
 #submission-container {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+input {
+    height: 2rem;
+    width: 20rem;
+    margin-right: 1rem;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+    border: none;
+}
+
+input:focus {
+    outline: none;
+}
+
+button {
+    height: 2rem;
+    width: 8rem;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+    background-image: linear-gradient(to bottom left, rgb(184, 13, 184), rgb(58, 169, 206));
+    font-weight: bold;
 }
 
 #display {
@@ -29,6 +53,13 @@ header {
     height: 40rem;
     background-color: white;
     border-radius: 50px;
+    margin-top: 1rem;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+    background-image: linear-gradient(to bottom left, rgb(184, 13, 184), rgb(58, 169, 206));
+}
+
+#location {
+    font-size: 2rem;
 }
 
 #grid-container {
@@ -40,8 +71,14 @@ header {
 }
 
 .grid-item {
-    background-color: red;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#grid-item-1 {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -50,8 +87,32 @@ header {
     font-size: 6rem;
 }
 
-#conditions {
+#feels-like {
+    font-size: 1.5rem;
+}
+
+#grid-item-2 {
     display: flex;
     flex-direction: column;
     font-size: 2rem;
+    gap: 2rem;
+}
+
+#grid-item-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    gap: 0.3rem;
+}
+
+#precipitation {
+    font-weight: bold;
+}
+
+#precip-types {
+    display: flex;
+    flex-direction: row;
+    gap: 0.2rem;
 }
