--- a/public/styles.css
+++ b/public/styles.css
@@ -49,6 +49,8 @@ button {
 }
 
 #display {
+    display: flex;
+    flex-direction: column;
     width: 60rem;
     height: 40rem;
     background-color: white;
@@ -115,4 +117,25 @@ button {
     display: flex;
     flex-direction: row;
     gap: 0.2rem;
+}
+
+#grid-item-4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    gap: 0.5rem;
+}
+
+.future-forecast {
+    display: grid;
+    grid-template-columns: 8rem 12rem 5rem 5rem;
+    width: 100%;
+    text-align: start;
+    gap: 0rem;
+}
+
+.future-forecast p {
+    margin: 0;
 }
